# charter-game

./: .agentignore  .cursorignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  TRANSFER.md  pyproject.toml  rtk.ps1  rtk.sh
data/: art.yaml  enemies.yaml  expeditions.yaml  gear.yaml  heroes.yaml  loot.yaml  recruits.yaml  skills.yaml  supplies.yaml  town.yaml  traits.yaml  world.yaml
docs/: AGENT_CONTEXT_MAP.md  STANDARDIZED_AGENT_ERGONOMICS_ROADMAP.md
project_sources/: 00_UPLOAD_INDEX.md  ADRS.md  COMMANDS.md  CONVENTIONS.md  CURRENT_STATE.md  DATA_SCHEMAS.md  GLOSSARY.md  PROJECT_CONTEXT.md  PROJECT_INSTRUCTIONS.md  REPO_MAP.md  TESTING.md
prompts/: agent_task_prompt_template.md  agent_workflow.md  drift_check_prompt.md  implement_from_plan.md  scout_packet_schema.md
scripts/: fix_tui_constants.py  fix_tui_widgets_cross_imports.py  fix_tui_widgets_imports.py  patch_tui_delegates.py  split_flows.py  split_memory.py  split_tui_render.py  split_tui_widgets.py  split_views.py
tests/: conftest.py  test_agent_doctor.py  test_agent_preflight.py  test_agent_review_packet.py  test_ai_counterfactuals.py  test_ai_decisions.py  test_ai_lab.py  test_ai_oracle.py  test_ai_packages.py  test_ai_tactics.py  test_art.py  test_breach_balance_lab.py  test_cli.py  test_death.py  test_design_diagnosis.py  test_dungeon.py  test_encounter_attribution.py  test_enemy_actions.py  test_enemy_decision.py  test_enemy_learning.py  test_enemy_training_harness.py  test_formation.py  test_generated_maze.py  test_hci_substrate.py  test_main.py  (+18 more)
(+151 files in other folders)
