[project]
name = "charter-game"
version = "0.2.0"
description = "A hard text-first expedition company RPG vertical slice."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.15"
dependencies = [
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "rich>=14,<15",
  "textual>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-timeout",
  "anyio",
  "hypothesis",
  "ruff",
  "mypy",
]

[project.scripts]
charter-game = "game.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --timeout=120"
markers = [
  "anyio: async TUI integration tests",
  "slow: lab harnesses and full expedition walks",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
